--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,13 @@ python:
 install: "pip install -r requirements.txt"
 
 # commands to run tests
+before_script: redis-cli ping
+
 script:
   - nosetests
 
 after_success:
   - codecov
+
+services:
+  - redis-server
