--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 Flask==0.12
 Flask-API==0.6.9
-pylint
 flake8
 redis>=2.10
+Cerberus==1.1
 
-# Testing
+# TDD
+pylint
 mock==2.0.0
 nose==1.3.7
 rednose==1.2.1
 pinocchio==0.4.2
-httpie==0.9.9
 
 # Code coverage
 coverage==4.2
@@ -20,3 +20,7 @@ behave==1.2.5
 selenium==3.3.1
 compare==0.2b0
 requests==2.13.0
+
+# Runtime
+httpie==0.9.9
+honcho
