--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==0.12
+flask>=1.0.0
+#Flask==0.12
 Flask-API==0.6.9
 flake8
 redis>=2.10
@@ -20,8 +21,10 @@ codecov==2.0.5
 behave==1.2.5
 selenium==3.3.1
 compare==0.2b0
-requests==2.13.0
+#requests==2.13.0
+requests>=2.20.0
 
 # Runtime
-httpie==0.9.9
+#httpie==0.9.9
+httpie>=1.0.3
 honcho
